fixed input spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,6 @@ body{
     font-size: 80px;
 }
 
-
 #logo-item{
     background-color: rgba(0, 0, 0, 0.4);
     width: 40vw;
@@ -102,7 +101,6 @@ button{
     
 }
 
-
 input{
     width: 300px;
     height: 40px;
@@ -119,16 +117,15 @@ input:focus{
 }
   
 input:invalid + span::before {
-content: '✖';
-color: red;
-font-size: 20px;
-
+    content: '✖';
+    color: red;
+    font-size: 20px;
 }
 
 input:valid + span::before {
-content: ' ✓';
-color: green;
-font-size: 20px;
+    content: ' ✓';
+    color: green;
+    font-size: 20px;
 }
 
 .triangle-left {
@@ -161,6 +158,7 @@ a{
         width: 100vw;
         font-family: Verdana, Geneva, Tahoma, sans-serif;
     }
+
     #logo{
         width: 100vw;
         font-size: 50px;
@@ -175,15 +173,23 @@ a{
         justify-content: center;
         align-items: center;
     }
+
     #form{
         width: 100vw;
     }
+
+    #form-item2{
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+    }
+
     #name-section, #mail-phone-section,#password-section{
         display: flex;
         flex-direction: column;
-        /* justify-content: center;
-        align-items: center; */
+        gap: 8px;
     }
+
     #form-body{
         display: flex;
         flex-direction: column;
@@ -191,16 +197,20 @@ a{
   
         padding: 50px;
     }
+
     p{
         font-size: 1.5rem;
         font-weight: 450;
         text-align: center;
     }
+
     input{
         width: 250px;
     }
+
     #button{
         display: flex;
         justify-content: center;
+        margin-top: 20px;
     }
 }
